metadata/force-app/main/default/objects/CustomName_gdqCu__c/CustomName_gdqCu__c.object-meta.xml
<CustomObject>
    <description>Description_KTFIl</description>
    <label>CustomLabel_ErMvJ</label>
    <nameField>
        <label>CustomLabel_ErMvJ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ErMvJs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>