metadata/force-app/main/default/objects/CustomName_gdqCu__c/fields/CustomField_coVQm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_coVQm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldaTANC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>