metadata/force-app/main/default/objects/CustomName_gdqCu__c/fields/CustomField_UjmJh__c.field-meta.xml
<CustomField>
    <fullName>CustomField_UjmJh__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldxKKiz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>