metadata/force-app/main/default/objects/CustomName_gdqCu__c/fields/CustomField_YrjVI__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YrjVI__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVMobe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>